--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.6.0",
-    "react-router-dom": "^6.8.0",
-    "react-query": "^3.39.3",
-    "styled-components": "^6.0.0",
-    "lucide-react": "^0.263.1",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "framer-motion": "^10.16.0"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
-} 
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4"
+  }
+}
