--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,4 +16,6 @@ passlib[bcrypt]==1.7.4
 aiofiles==23.2.1
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2 
+httpx==0.25.2
+beautifulsoup4==4.12.2
+lxml==4.9.3 
