--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,7 @@ jobs:
       working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov flake8 black isort
+        pip install pytest
     
     - name: Test with pytest
       working-directory: ./backend
@@ -67,7 +66,7 @@ jobs:
     
     - name: Run tests
       working-directory: ./frontend
-      run: npm test -- --coverage --watchAll=false --testPathIgnorePatterns=[]
+      run: npm test -- --watchAll=false --verbose=false
     
     - name: Build project
       working-directory: ./frontend
